Fix find-in-page for words spanning display:contents.

Don't emit new lines before/after display:contents elements.

Bug: 837452
Change-Id: I9e43f836d569b6435672c36f5c50a13605fbdc21
Reviewed-on: https://chromium-review.googlesource.com/1042285
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556391}
Former-commit-id: 2698ab2e0135bd4b62a4e472eceb3174592bf605